improving about.html and css.

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
   <body>
     <div class="about-section container">
       <div class="row">
-        <div class="col-6">
+        <div class="col-lg-6">
           <div class="about-section-content">
             <h1 class="mb-5">Hi I am Amanda Walden</h1>
             <h2 class="mb-5">Frontend Developer, based in the USA.</h2>
@@ -38,7 +38,7 @@
             <a href="" class="btn btn-branding">See my projects</a>
           </div>
         </div>
-        <div class="col-6">
+        <div class="col-lg-6">
           <img src="images/Patricia.png" alt="" class="image-fluid" />
         </div>
       </div>
