--- a/about.html
+++ b/about.html
@@ -23,10 +23,10 @@
     <title>Amanda Walden</title>
   </head>
   <body>
-    <div class="about-section container">
+    <div class="content-container container">
       <div class="row">
         <div class="col-lg-6">
-          <div class="about-section-content">
+          <div class="content">
             <h1 class="mb-5">Hi I am Amanda Walden</h1>
             <h2 class="mb-5">Frontend Developer, based in the USA.</h2>
             <p class="mb-5">
@@ -39,7 +39,7 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <img src="images/Patricia.png" alt="" class="image-fluid" />
+          <img src="images/Patricia.png" alt="" class="img-fluid" />
         </div>
       </div>
     </div>
