--- a/index.html
+++ b/index.html
@@ -16,35 +16,28 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles/portfolio.css" />
-    <script
-      src="https://kit.fontawesome.com/a454fa898f.js"
-      crossorigin="anonymous"
-    ></script>
-    <title>Amanda Walden</title>
+     <script src="https://kit.fontawesome.com/a454fa898f.js" crossorigin="anonymous"></script>
+     <title>Amanda Walden</title>
   </head>
   <body>
     <div class="container">
-    <nav class="d-flex justify-content-between">
-      <a href="/">
-      <img src="images/logo.png" class="logo d-none d-md-block" alt="" />
-      <img src="images/logo-small.jpg" class="logo d-block d-md-none" alt="">
+      <nav class="d-flex justify-content-between">
+        <a href="/">
+          <img src="images/logo.png" class="logo d-none d-md-block" alt="" />
+          <img
+            src="images/logo-small.jpg"
+            class="logo d-block d-md-none"
+            alt=""
+          />
         </a>
-      <ul>
-          <li class="active"><a href="/">
-          Home
-          </a></li>
-          <li><a href="/about.html"> 
-          About
-        </a></li>
-          <li><a href="/work.html"> 
-          Work
-        </a></li>
-          <li><a href="/contact.html"> 
-          Contact
-        </a></li>
+        <ul>
+          <li class="active"><a href="/"> Home </a></li>
+          <li><a href="/about.html"> About </a></li>
+          <li><a href="/work.html"> Work </a></li>
+          <li><a href="/contact.html"> Contact </a></li>
         </ul>
-        </nav>
-      </div>
+      </nav>
+    </div>
     <div class="hero">
       <p>👋 Hello, I am</p>
       <h1>Amanda Walden</h1>
@@ -116,6 +109,22 @@
           </div>
         </div>
       </div>
+      <footer>
+        <div class="d-flex justify-content-center mb-5">
+        <a href="mailto:awalden95@gmail.com" class="email-link">Awalden95@mail.com</a>
+        </div>
+        <div class="social-links d-flex justify-content-center mb-5"> 
+          <a href="">
+        <i class="fa-brands fa-instagram"></i>
+        </a>
+         <a href="">
+           <i class="fa-brands fa-github"></i> 
+        </a>
+        <a href="">
+          <i class="fa-brands fa-linkedin"></i>
+        </a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
