--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <img src="images/Patricia.png" alt="" class="img-fluid" />
+          <img src="images/Amanda-Walden-Portfolio-Picture.png" alt="" class="img-fluid" />
         </div>
       </div>
     </div>
