--- a/work.html
+++ b/work.html
@@ -50,28 +50,17 @@
             <h1 class="mb-5">Take a look at what I've been working on!</h1>
         <div class="row">
         <div class="col-md-6 mb-4">
-        <img src="images/yogurt.png" alt="" class="img-fluid mb-3">
+        <img src="images/sub-project-2.png" alt="" class="img-fluid mb-3">
         <h3 class="text-center m-0">Yogurt Project</h3>
         <p class="text-center text-muted">Built with HTML and CSS</p>
         </div>  
          <div class="col-md-6 mb-4">
-        <img src="images/weather.png" alt="" class="img-fluid mb-3">
+        <img src="images/weather-app-2.png" alt="" class="img-fluid mb-3">
         <h3 class="text-center m-0">Weather App</h3>
         <p class="text-center text-muted">Built with HTML, CSS and Javascript</p>
         </div>
         </div>
-        <div class="row">
-        <div class="col-md-6 mb-4">
-        <img src="images/dictionary.png" alt="" class="img-fluid mb-3">
-        <h3 class="text-center m-0">Dictionary</h3>
-        <p class="text-center text-muted">Built with HTML, CSS with React</p>
-        </div>  
-         <div class="col-md-6 mb-4">
-        <img src="images/translation.png" alt="" class="img-fluid mb-3">
-        <h3 class="text-center m-0">Translation</h3>
-        <p class="text-center text-muted">Built with HTML, CSS with React</p>
-        </div>
-        </div>
+        
         </div>
     </div>
   </body>
