--- a/index.html
+++ b/index.html
@@ -110,17 +110,27 @@
         </div>
       </div>
       <footer>
+        <div class="contact-box  justify-content-between mb-5 d-none d-md-flex">
+          <div>
+          <h4>Work Inquiry</h4>
+          <p class="text-muted">Let's work  together</p>
+          </div>
+          <div>
+          <a href="" class="btn btn-branding mt-3">Contact Me</a>
+           </div>
+        </div>
+
         <div class="d-flex justify-content-center mb-5">
         <a href="mailto:awalden95@gmail.com" class="email-link">Awalden95@mail.com</a>
         </div>
         <div class="social-links d-flex justify-content-center mb-5"> 
-          <a href="">
+          <a href="https://www.instagram.com/awalden95/" target="_blank">
         <i class="fa-brands fa-instagram"></i>
         </a>
-         <a href="">
+         <a href="https://github.com/AmandaWalden" target="_blank">
            <i class="fa-brands fa-github"></i> 
         </a>
-        <a href="">
+        <a href="https://www.linkedin.com/in/amanda-walden-37a3b7227/" target="_blank">
           <i class="fa-brands fa-linkedin"></i>
         </a>
         </div>
