--- a/index.html
+++ b/index.html
@@ -17,24 +17,25 @@
     ></script>
     <link rel="stylesheet" href="styles/portfolio.css" />
      <script src="https://kit.fontawesome.com/a454fa898f.js" crossorigin="anonymous"></script>
-     <title>Amanda Walden</title>
+     <title>Front-end Developer - Amanda Walden</title>
+     <meta name="description" content="Amanda is Front-end Developer based in the USA.">
   </head>
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/">
-          <img src="images/logo.png" class="logo d-none d-md-block" alt="" />
+        <a href="/" title="Homepage">
+          <img src="images/logo.png" class="logo d-none d-md-block" alt="Amanda's Logo" />
           <img
             src="images/logo-small.jpg"
             class="logo d-block d-md-none"
-            alt=""
+            alt="Amanda's Logo"
           />
         </a>
         <ul>
-          <li class="active"><a href="/"> Home </a></li>
-          <li><a href="/about.html"> About </a></li>
-          <li><a href="/work.html"> Work </a></li>
-          <li><a href="/contact.html"> Contact </a></li>
+          <li class="active"><a href="/" title="Homepage"> Home </a></li>
+          <li><a href="/about.html" title="About Amanda"> About </a></li>
+          <li><a href="/work.html" title="Amanda's Work"> Work </a></li>
+          <li><a href="/contact.html" title="Contact Amanda"> Contact </a></li>
         </ul>
       </nav>
     </div>
@@ -43,7 +44,7 @@
       <h1>Amanda Walden</h1>
       <h2 class="mb-5">Front-end developer based in the USA</h2>
       <div>
-        <a href="#" class="btn btn-branding">Contact Me</a>
+        <a href="/contact.html" class="btn btn-branding" title="Contact Me">Contact Me</a>
       </div>
     </div>
     <p class="text-center m-5">
@@ -52,7 +53,7 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/yogurt.png" class="img-fluid" alt="" />
+          <img src="images/yogurt.png" class="img-fluid" alt="Yogurt Project Preview" />
         </div>
 
         <div class="col">
@@ -64,7 +65,7 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="#" class="btn btn-branding-outline"> Learn more</a>
+            <a href="/work.html" class="btn btn-branding-outline"> Learn more</a>
           </div>
         </div>
       </div>
@@ -81,11 +82,11 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="#" class="btn btn-branding-outline"> Learn more</a>
+            <a href="/work.html" class="btn btn-branding-outline"> Learn more</a>
           </div>
         </div>
         <div class="col d-none d-lg-block">
-          <img src="images/weather.png" class="img-fluid" alt="" />
+          <img src="images/weather.png" class="img-fluid" alt="Weather Project Preview" />
         </div>
       </div>
     </div>
@@ -93,7 +94,7 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/dictionary.png" class="img-fluid" alt="" />
+          <img src="images/dictionary.png" class="img-fluid" alt="Dictionary App Preview" />
         </div>
 
         <div class="col">
@@ -105,35 +106,36 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="#" class="btn btn-branding-outline"> Learn more</a>
+            <a href="/work.html" class="btn btn-branding-outline"> Learn more</a>
           </div>
         </div>
       </div>
-      <footer>
+      <footer class="container">
         <div class="contact-box  justify-content-between mb-5 d-none d-md-flex">
           <div>
-          <h4>Work Inquiry</h4>
+          <h3>Work Inquiry</h3>
           <p class="text-muted">Let's work  together</p>
           </div>
           <div>
-          <a href="" class="btn btn-branding mt-3">Contact Me</a>
+          <a href="/contact.html"  class="btn btn-branding mt-3" title="Contact Me">Contact Me</a>
            </div>
         </div>
 
         <div class="d-flex justify-content-center mb-5">
-        <a href="mailto:awalden95@gmail.com" class="email-link">Awalden95@mail.com</a>
+        <a href="mailto:awalden95@gmail.com" class="email-link" title="Email Amanda">Awalden95@mail.com</a>
         </div>
         <div class="social-links d-flex justify-content-center mb-5"> 
-          <a href="https://www.instagram.com/awalden95/" target="_blank">
+          <a href="https://www.instagram.com/awalden95/" target="_blank" title="Instagram Profile">
         <i class="fa-brands fa-instagram"></i>
         </a>
-         <a href="https://github.com/AmandaWalden" target="_blank">
+         <a href="https://github.com/AmandaWalden" target="_blank" title="Github Profile">
            <i class="fa-brands fa-github"></i> 
         </a>
-        <a href="https://www.linkedin.com/in/amanda-walden-37a3b7227/" target="_blank">
+        <a href="https://www.linkedin.com/in/amanda-walden-37a3b7227/" target="_blank" title="Linkedin Profile">
           <i class="fa-brands fa-linkedin"></i>
         </a>
         </div>
+        <p class="text-center mt-5"> ✌ This project was coded by Amanda Walden, and it is <a href="https://github.com/AmandaWalden/My-Portfolio-Project" target="_blank">open-sourced</a></p>
       </footer>
     </div>
   </body>
