--- a/work.html
+++ b/work.html
@@ -20,31 +20,28 @@
       src="https://kit.fontawesome.com/a454fa898f.js"
       crossorigin="anonymous"
     ></script>
-    <title>Amanda Walden</title>
+    <title>Amanda's Work - Amanda Walden</title>
+    <meta name="description" content="Amanda's projects and the coding languages that were used to make them.">
   </head>
   <body>
-      <div class="container">
-    <nav class="d-flex justify-content-between">
-      <a href="/">
-      <img src="images/logo.png" class="logo d-none d-md-block" alt="" />
-      <img src="images/logo-small.jpg" class="logo d-block d-md-none" alt="">
+     <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/" title="Homepage">
+          <img src="images/logo.png" class="logo d-none d-md-block" alt="Amanda's Logo" />
+          <img
+            src="images/logo-small.jpg"
+            class="logo d-block d-md-none"
+            alt="Amanda's Logo"
+          />
         </a>
-      <ul>
-          <li><a href="/">
-          Home
-          </a></li>
-          <li><a href="/about.html"> 
-          About
-        </a></li>
-          <li class="active"><a href="/work.html"> 
-          Work
-        </a></li>
-          <li><a href="/contact.html"> 
-          Contact
-        </a></li>
+        <ul>
+          <li ><a href="/" title="Homepage"> Home </a></li>
+          <li><a href="/about.html" title="About Amanda"> About </a></li>
+          <li class="active"><a href="/work.html" title="Amanda's Work"> Work </a></li>
+          <li><a href="/contact.html" title="Contact Amanda"> Contact </a></li>
         </ul>
-        </nav>
-      </div>
+      </nav>
+    </div>
     <div class="content-container container">
       <div class="content">
             <h1 class="mb-5">Take a look at what I've been working on!</h1>
@@ -60,8 +57,34 @@
         <p class="text-center text-muted">Built with HTML, CSS and Javascript</p>
         </div>
         </div>
-        
         </div>
     </div>
+    <footer class="container">
+        <div class="contact-box  justify-content-between mb-5 d-none d-md-flex">
+          <div>
+          <h3>Work Inquiry</h3>
+          <p class="text-muted">Let's work  together</p>
+          </div>
+          <div>
+          <a href="/contact.html"  class="btn btn-branding mt-3" title="Contact Me">Contact Me</a>
+           </div>
+        </div>
+
+        <div class="d-flex justify-content-center mb-5">
+        <a href="mailto:awalden95@gmail.com" class="email-link" title="Email Amanda">Awalden95@mail.com</a>
+        </div>
+        <div class="social-links d-flex justify-content-center mb-5"> 
+          <a href="https://www.instagram.com/awalden95/" target="_blank" title="Instagram Profile">
+        <i class="fa-brands fa-instagram"></i>
+        </a>
+         <a href="https://github.com/AmandaWalden" target="_blank" title="Github Profile">
+           <i class="fa-brands fa-github"></i> 
+        </a>
+        <a href="https://www.linkedin.com/in/amanda-walden-37a3b7227/" target="_blank" title="Linkedin Profile">
+          <i class="fa-brands fa-linkedin"></i>
+        </a>
+        </div>
+        <p class="text-center mt-5"> ✌ This project was coded by Amanda Walden, and it is <a href="https://github.com/AmandaWalden/My-Portfolio-Project" target="_blank">open-sourced</a></p>
+      </footer>
   </body>
 </html>
