Personalized my portfolio project.

--- a/contact.html
+++ b/contact.html
@@ -27,9 +27,9 @@
       <div class="container">
       <nav class="d-flex justify-content-between">
         <a href="/" title="Homepage">
-          <img src="images/logo.png" class="logo d-none d-md-block" alt="Amanda's Logo" />
+          <img src="images/AmandaWalden.png" class="logo d-none d-md-block" alt="Amanda's Logo" />
           <img
-            src="images/logo-small.jpg"
+            src="images/AmandaWalden.png"
             class="logo d-block d-md-none"
             alt="Amanda's Logo"
           />
@@ -78,9 +78,7 @@
         <a href="mailto:awalden95@gmail.com" class="email-link" title="Email Amanda">Awalden95@mail.com</a>
         </div>
         <div class="social-links d-flex justify-content-center mb-5"> 
-          <a href="https://www.instagram.com/awalden95/" target="_blank" title="Instagram Profile">
-        <i class="fa-brands fa-instagram"></i>
-        </a>
+         
          <a href="https://github.com/AmandaWalden" target="_blank" title="Github Profile">
            <i class="fa-brands fa-github"></i> 
         </a>
