--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <div class="container">
       <nav class="d-flex justify-content-between">
         <a href="/" title="Homepage">
-          <img src="images/logo.png" class="logo d-none d-md-block" alt="Amanda's Logo" />
+          <img src="images/AmandaWalden.png" class="logo d-none d-md-block" alt="Amanda's Logo" />
           <img
-            src="images/logo-small.jpg"
+            src="images/AmandaWalden.png"
             class="logo d-block d-md-none"
             alt="Amanda's Logo"
           />
@@ -40,7 +40,7 @@
       </nav>
     </div>
     <div class="hero">
-      <p>👋 Hello, I am</p>
+      <p>👋 Hello, I'm</p>
       <h1>Amanda Walden</h1>
       <h2 class="mb-5">Front-end developer based in the USA</h2>
       <div>
@@ -52,18 +52,14 @@
     </p>
     <div class="container">
       <div class="row mb-5">
-        <div class="col d-none d-lg-block">
-          <img src="images/yogurt.png" class="img-fluid" alt="Yogurt Project Preview" />
+        <div class="col d-none d-lg-block sub-img">
+        <img src="images/Landing-Project.png" class="img-fluid" alt="Landing Project">
         </div>
-
         <div class="col">
           <div class="product-description">
-            <h2 class="mb-5">Yogurt Project</h2>
+            <h2 class="mb-5">Landing Project</h2>
             <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+              This was my first project with SheCodes. The objective of the project was to make a file about something you love. The example was Greek Yogurt so I thought of my favorite food from my hometown of Orlando, Florida. 
             </p>
             <a href="/work.html" class="btn btn-branding-outline"> Learn more</a>
           </div>
@@ -77,40 +73,17 @@
           <div class="product-description">
             <h2 class="mb-5">Weather App</h2>
             <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+            This was my second project with SheCodes. I learned about APIs, Bootstrap and how to host a website that use real-time data.
             </p>
             <a href="/work.html" class="btn btn-branding-outline"> Learn more</a>
           </div>
         </div>
         <div class="col d-none d-lg-block">
-          <img src="images/weather.png" class="img-fluid" alt="Weather Project Preview" />
+          <img src="images/Project-Weather-App.png" class="img-fluid" alt="Weather Project Preview" />
         </div>
       </div>
     </div>
-
-    <div class="container">
-      <div class="row mb-5">
-        <div class="col d-none d-lg-block">
-          <img src="images/dictionary.png" class="img-fluid" alt="Dictionary App Preview" />
-        </div>
-
-        <div class="col">
-          <div class="product-description">
-            <h2 class="mb-5">Dictionary App</h2>
-            <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
-            </p>
-            <a href="/work.html" class="btn btn-branding-outline"> Learn more</a>
-          </div>
-        </div>
-      </div>
-      <footer class="container">
+   <footer class="container">
         <div class="contact-box  justify-content-between mb-5 d-none d-md-flex">
           <div>
           <h3>Work Inquiry</h3>
@@ -125,9 +98,7 @@
         <a href="mailto:awalden95@gmail.com" class="email-link" title="Email Amanda">Awalden95@mail.com</a>
         </div>
         <div class="social-links d-flex justify-content-center mb-5"> 
-          <a href="https://www.instagram.com/awalden95/" target="_blank" title="Instagram Profile">
-        <i class="fa-brands fa-instagram"></i>
-        </a>
+         
          <a href="https://github.com/AmandaWalden" target="_blank" title="Github Profile">
            <i class="fa-brands fa-github"></i> 
         </a>
