--- a/about.html
+++ b/about.html
@@ -21,22 +21,31 @@
       crossorigin="anonymous"
     ></script>
     <title>About Amanda - Amanda Walden</title>
-    <meta name="description" content="A breif history about Amanda's coding journey.">
+    <meta
+      name="description"
+      content="A breif history about Amanda's coding journey."
+    />
   </head>
   <body>
-     <div class="container">
+    <div class="container">
       <nav class="d-flex justify-content-between">
         <a href="/" title="Homepage">
-          <img src="images/logo.png" class="logo d-none d-md-block" alt="Amanda's Logo" />
           <img
-            src="images/logo-small.jpg"
+            src="images/AmandaWalden.png"
+            class="logo d-none d-md-block"
+            alt="Amanda's Logo"
+          />
+          <img
+            src="images/AmandaWalden.png"
             class="logo d-block d-md-none"
             alt="Amanda's Logo"
           />
         </a>
         <ul>
-          <li ><a href="/" title="Homepage"> Home </a></li>
-          <li class="active"><a href="/about.html" title="About Amanda"> About </a></li>
+          <li><a href="/" title="Homepage"> Home </a></li>
+          <li class="active">
+            <a href="/about.html" title="About Amanda"> About </a>
+          </li>
           <li><a href="/work.html" title="Amanda's Work"> Work </a></li>
           <li><a href="/contact.html" title="Contact Amanda"> Contact </a></li>
         </ul>
@@ -46,48 +55,88 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="content">
-            <h1 class="mb-5">Hi I am Amanda Walden</h1>
-            <h2 class="mb-5">Frontend Developer, based in the USA.</h2>
-            <p class="mb-5">
-              For anyone who wants to start learning code, this workshop is very
-              interesting. You will be challenged with different exercises, and
-              everything is well explained, homework and deadlines are good for
-              keep focus
+            <h1 class="mb-3">Hello, I'm Amanda Walden</h1>
+            <h2 class="mb-3">Junior Front-end Developer, based in the USA.</h2>
+            <p class="mb-3">
+              I am a Junior Front-end Developer. My current job position is a
+              Licensed Massage Therapist at an Integrated Healthcare office.
+              What I love most about my current job is when I'm able to locate
+              their problem area and improve their quality of life. But in my
+              freetime I had a desire to learn some new skills and I came across
+              a girl like myself and she was explaining her job as a Developer.
+              I did my research and started learning about what coding is and
+              found out that I love coding and have been doing it for fun after
+              I get off work. I then realized that coding could be a new career
+              that would be fun and get paid as well!! After that realization, I
+              began to research schools that would prepare me for my new career.
+              I decided on "SheCodes" to get my training as a Front-end
+              Developer. I'm extremely passionate and would love to be able to
+              do this job fulltime. I'm having so much fun learning the
+              languages and I plan to continue learning. The languages and
+              coding tools I have learned are HTML5, CSS3, Javascript5, API
+              Bootstrap, GitHub, Visual Studio Code, Flexbox, SEO, Hosting and
+              Responsive.
             </p>
-            <a href="" class="btn btn-branding">See my projects</a>
+            <a href="/work.html" class="btn btn-branding">See my projects</a>
           </div>
         </div>
         <div class="col-lg-6">
-          <img src="images/Amanda-Walden-Portfolio-Picture.png" alt="" class="img-fluid" />
+          <img
+            src="images/Professionallook.png"
+            alt="Profile Picture"
+            class="img-fluid rounded"
+          />
         </div>
       </div>
     </div>
     <footer class="container">
-        <div class="contact-box  justify-content-between mb-5 d-none d-md-flex">
-          <div>
+      <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+        <div>
           <h3>Work Inquiry</h3>
-          <p class="text-muted">Let's work  together</p>
-          </div>
-          <div>
-          <a href="/contact.html"  class="btn btn-branding mt-3" title="Contact Me">Contact Me</a>
-           </div>
+          <p class="text-muted">Let's work together</p>
         </div>
+        <div>
+          <a
+            href="/contact.html"
+            class="btn btn-branding mt-3"
+            title="Contact Me"
+            >Contact Me</a
+          >
+        </div>
+      </div>
 
-        <div class="d-flex justify-content-center mb-5">
-        <a href="mailto:awalden95@gmail.com" class="email-link" title="Email Amanda">Awalden95@mail.com</a>
-        </div>
-        <div class="social-links d-flex justify-content-center mb-5"> 
-          <a href="https://www.instagram.com/awalden95/" target="_blank" title="Instagram Profile">
-        <i class="fa-brands fa-instagram"></i>
+      <div class="d-flex justify-content-center mb-5">
+        <a
+          href="mailto:awalden95@gmail.com"
+          class="email-link"
+          title="Email Amanda"
+          >Awalden95@mail.com</a
+        >
+      </div>
+      <div class="social-links d-flex justify-content-center mb-5">
+        <a
+          href="https://github.com/AmandaWalden"
+          target="_blank"
+          title="Github Profile"
+        >
+          <i class="fa-brands fa-github"></i>
         </a>
-         <a href="https://github.com/AmandaWalden" target="_blank" title="Github Profile">
-           <i class="fa-brands fa-github"></i> 
-        </a>
-        <a href="https://www.linkedin.com/in/amanda-walden-37a3b7227/" target="_blank" title="Linkedin Profile">
+        <a
+          href="https://www.linkedin.com/in/amanda-walden-37a3b7227/"
+          target="_blank"
+          title="Linkedin Profile"
+        >
           <i class="fa-brands fa-linkedin"></i>
         </a>
-        </div>
-        <p class="text-center mt-5"> ✌ This project was coded by Amanda Walden, and it is <a href="https://github.com/AmandaWalden/My-Portfolio-Project" target="_blank">open-sourced</a></p>
-      </footer>
+      </div>
+      <p class="text-center mt-5">
+        ✌ This project was coded by Amanda Walden, and it is
+        <a
+          href="https://github.com/AmandaWalden/My-Portfolio-Project"
+          target="_blank"
+          >open-sourced</a
+        >
+      </p>
+    </footer>
   </body>
 </html>
