--- a/work.html
+++ b/work.html
@@ -27,9 +27,9 @@
      <div class="container">
       <nav class="d-flex justify-content-between">
         <a href="/" title="Homepage">
-          <img src="images/logo.png" class="logo d-none d-md-block" alt="Amanda's Logo" />
+          <img src="images/AmandaWalden.png" class="logo d-none d-md-block" alt="Amanda's Logo" />
           <img
-            src="images/logo-small.jpg"
+            src="images/AmandaWalden.png"
             class="logo d-block d-md-none"
             alt="Amanda's Logo"
           />
@@ -47,14 +47,29 @@
             <h1 class="mb-5">Take a look at what I've been working on!</h1>
         <div class="row">
         <div class="col-md-6 mb-4">
-        <img src="images/sub-project-2.png" alt="" class="img-fluid mb-3">
-        <h3 class="text-center m-0">Yogurt Project</h3>
-        <p class="text-center text-muted">Built with HTML and CSS</p>
+        <img src="images/Landing-Project.png" alt="Landing Page" class="sub-img img-fluid mb-3">
+        <h3 class="text-center m-0">Landing Project</h3>
+        <p class="text-center text-muted">Built with HTML, CSS and Javascript</p>
         </div>  
          <div class="col-md-6 mb-4">
-        <img src="images/weather-app-2.png" alt="" class="img-fluid mb-3">
+        <img src="images/Project-Weather-App.png" alt="Weather App" class="img-fluid mb-5">
         <h3 class="text-center m-0">Weather App</h3>
         <p class="text-center text-muted">Built with HTML, CSS and Javascript</p>
+        </div>
+        </div>
+        </div>
+    </div>
+     <div class="content-container container">
+      <div class="content">
+            <h1 class="mb-5 text-center">My Certifications</h1>
+        <div class="row">
+        <div class="col-md-6 mb-4">
+        <img src="images/SheCodesBasicCertificate.png" alt="SheCodes Basic Certificate" class="sub-img img-fluid mb-3">
+        <h3 class="text-center m-0">SheCodes Basic Certificate</h3>
+        </div>  
+         <div class="col-md-6 mb-4">
+        <img src="images/SheCodesPlusCertificate.png" alt="SheCodes Plus Certificate" class="img-fluid mb-3">
+        <h3 class="text-center m-0">SheCodes Plus Certificate</h3>
         </div>
         </div>
         </div>
@@ -74,9 +89,7 @@
         <a href="mailto:awalden95@gmail.com" class="email-link" title="Email Amanda">Awalden95@mail.com</a>
         </div>
         <div class="social-links d-flex justify-content-center mb-5"> 
-          <a href="https://www.instagram.com/awalden95/" target="_blank" title="Instagram Profile">
-        <i class="fa-brands fa-instagram"></i>
-        </a>
+          
          <a href="https://github.com/AmandaWalden" target="_blank" title="Github Profile">
            <i class="fa-brands fa-github"></i> 
         </a>
