added links to the images.

--- a/about.html
+++ b/about.html
@@ -56,24 +56,24 @@
         <div class="col-lg-6">
           <div class="content">
             <h1 class="mb-3">Hello, I'm Amanda Walden</h1>
-            <h2 class="mb-3">Junior Front-end Developer, based in the USA.</h2>
+            <h2 class="mb-3">Front-end Developer, based in the USA.</h2>
             <p class="mb-3">
-              I am a Junior Front-end Developer. My current job position is a
+              I'm a Front-end Developer. My current job position is a
               Licensed Massage Therapist at an Integrated Healthcare office.
               What I love most about my current job is when I'm able to locate
               their problem area and improve their quality of life. But in my
               freetime I had a desire to learn some new skills and I came across
-              a girl like myself and she was explaining her job as a Developer.
+              a girl on TikTok and she was explaining her job as a Developer.
               I did my research and started learning about what coding is and
               found out that I love coding and have been doing it for fun after
               I get off work. I then realized that coding could be a new career
-              that would be fun and get paid as well!! After that realization, I
+              that would be fun and get paid as well. After that realization, I
               began to research schools that would prepare me for my new career.
               I decided on "SheCodes" to get my training as a Front-end
               Developer. I'm extremely passionate and would love to be able to
-              do this job fulltime. I'm having so much fun learning the
+              do this job full-time. I'm having so much fun learning the
               languages and I plan to continue learning. The languages and
-              coding tools I have learned are HTML5, CSS3, Javascript5, API
+              coding tools I have learned are HTML5, CSS3, Javascript5, API,
               Bootstrap, GitHub, Visual Studio Code, Flexbox, SEO, Hosting and
               Responsive.
             </p>
@@ -84,7 +84,7 @@
           <img
             src="images/Professionallook.png"
             alt="Profile Picture"
-            class="img-fluid rounded"
+            class="img-fluid"
           />
         </div>
       </div>
