--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="hero">
       <p>👋 Hello, I'm</p>
       <h1>Amanda Walden</h1>
-      <h2 class="mb-5">Front-end developer based in the USA</h2>
+      <h2 class="mb-5">Front-end developer, based in the USA.</h2>
       <div>
         <a href="/contact.html" class="btn btn-branding" title="Contact Me">Contact Me</a>
       </div>
@@ -52,8 +52,8 @@
     </p>
     <div class="container">
       <div class="row mb-5">
-        <div class="col d-none d-lg-block sub-img">
-        <img src="images/Landing-Project.png" class="img-fluid" alt="Landing Project">
+        <div class="col d-none d-lg-block">
+      <a href="https://www.shecodes.io/workshops/shecodes-basics-a5348804-efdf-4f64-a43c-00e2350c47b5/projects/603459" target="_blank"><img src="images/Landing-Project.png" class="img-fluid" alt="Landing Project"></a>
         </div>
         <div class="col">
           <div class="product-description">
@@ -61,7 +61,7 @@
             <p class="mb-5 text-muted">
               This was my first project with SheCodes. The objective of the project was to make a file about something you love. The example was Greek Yogurt so I thought of my favorite food from my hometown of Orlando, Florida. 
             </p>
-            <a href="/work.html" class="btn btn-branding-outline"> Learn more</a>
+            <a href="https://www.shecodes.io/workshops/shecodes-basics-a5348804-efdf-4f64-a43c-00e2350c47b5/projects/603459" class="btn btn-branding-outline" target="_blank"> Learn more</a>
           </div>
         </div>
       </div>
@@ -73,13 +73,13 @@
           <div class="product-description">
             <h2 class="mb-5">Weather App</h2>
             <p class="mb-5 text-muted">
-            This was my second project with SheCodes. I learned about APIs, Bootstrap and how to host a website that use real-time data.
+            This was my second project with SheCodes. I learned about APIs, Bootstrap and how to host a website by using real-time data.
             </p>
-            <a href="/work.html" class="btn btn-branding-outline"> Learn more</a>
+            <a href="https://www.shecodes.io/workshops/shecodes-plus-3ff7a1be-6209-4981-80b1-b08a05d734da/projects/679183" class="btn btn-branding-outline" target="_blank"> Learn more</a>
           </div>
         </div>
         <div class="col d-none d-lg-block">
-          <img src="images/Project-Weather-App.png" class="img-fluid" alt="Weather Project Preview" />
+        <a href="https://www.shecodes.io/workshops/shecodes-plus-3ff7a1be-6209-4981-80b1-b08a05d734da/projects/679183" target="_blank"><img src="images/Project-Weather-App.png" class="img-fluid" alt="Weather Project Preview" /></a>
         </div>
       </div>
     </div>
