--- a/contact.html
+++ b/contact.html
@@ -21,13 +21,20 @@
       crossorigin="anonymous"
     ></script>
     <title>Contact Amanda - Amanda Walden</title>
-    <meta name="description" content="How to get in touch with Amanda Walden.">
+    <meta
+      name="description"
+      content="How to get in touch with Amanda Walden."
+    />
   </head>
   <body>
-      <div class="container">
+    <div class="container">
       <nav class="d-flex justify-content-between">
         <a href="/" title="Homepage">
-          <img src="images/AmandaWalden.png" class="logo d-none d-md-block" alt="Amanda's Logo" />
+          <img
+            src="images/AmandaWalden.png"
+            class="logo d-none d-md-block"
+            alt="Amanda's Logo"
+          />
           <img
             src="images/AmandaWalden.png"
             class="logo d-block d-md-none"
@@ -35,10 +42,12 @@
           />
         </a>
         <ul>
-          <li ><a href="/" title="Homepage"> Home </a></li>
+          <li><a href="/" title="Homepage"> Home </a></li>
           <li><a href="/about.html" title="About Amanda"> About </a></li>
           <li><a href="/work.html" title="Amanda's Work"> Work </a></li>
-          <li class="active"><a href="/contact.html" title="Contact Amanda"> Contact </a></li>
+          <li class="active">
+            <a href="/contact.html" title="Contact Amanda"> Contact </a>
+          </li>
         </ul>
       </nav>
     </div>
@@ -64,29 +73,53 @@
       </div>
     </div>
     <footer class="container">
-        <div class="contact-box  justify-content-between mb-5 d-none d-md-flex">
-          <div>
+      <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+        <div>
           <h3>Work Inquiry</h3>
-          <p class="text-muted">Let's work  together</p>
-          </div>
-          <div>
-          <a href="/contact.html"  class="btn btn-branding mt-3" title="Contact Me">Contact Me</a>
-           </div>
+          <p class="text-muted">Let's work together</p>
         </div>
+        <div>
+          <a
+            href="/contact.html"
+            class="btn btn-branding mt-3"
+            title="Contact Me"
+            >Contact Me</a
+          >
+        </div>
+      </div>
 
-        <div class="d-flex justify-content-center mb-5">
-        <a href="mailto:awalden95@gmail.com" class="email-link" title="Email Amanda">Awalden95@mail.com</a>
-        </div>
-        <div class="social-links d-flex justify-content-center mb-5"> 
-         
-         <a href="https://github.com/AmandaWalden" target="_blank" title="Github Profile">
-           <i class="fa-brands fa-github"></i> 
+      <div class="d-flex justify-content-center mb-5">
+        <a
+          href="mailto:awalden95@gmail.com"
+          class="email-link"
+          title="Email Amanda"
+          >Awalden95@mail.com</a
+        >
+      </div>
+      <div class="social-links d-flex justify-content-center mb-5">
+        <a
+          href="https://github.com/AmandaWalden"
+          target="_blank"
+          title="Github Profile"
+        >
+          <i class="fa-brands fa-github"></i>
         </a>
-        <a href="https://www.linkedin.com/in/amanda-walden-37a3b7227/" target="_blank" title="Linkedin Profile">
+        <a
+          href="https://www.linkedin.com/in/amanda-walden-37a3b7227/"
+          target="_blank"
+          title="Linkedin Profile"
+        >
           <i class="fa-brands fa-linkedin"></i>
         </a>
-        </div>
-        <p class="text-center mt-5"> ✌ This project was coded by Amanda Walden, and it is <a href="https://github.com/AmandaWalden/My-Portfolio-Project" target="_blank">open-sourced</a></p>
-      </footer>
+      </div>
+      <p class="text-center mt-5">
+        ✌ This project was coded by Amanda Walden, and it is
+        <a
+          href="https://github.com/AmandaWalden/My-Portfolio-Project"
+          target="_blank"
+          >open-sourced</a
+        >
+      </p>
+    </footer>
   </body>
 </html>
