--- a/work.html
+++ b/work.html
@@ -21,13 +21,20 @@
       crossorigin="anonymous"
     ></script>
     <title>Amanda's Work - Amanda Walden</title>
-    <meta name="description" content="Amanda's projects and the coding languages that were used to make them.">
+    <meta
+      name="description"
+      content="Amanda's projects and the coding languages that were used to make them."
+    />
   </head>
   <body>
-     <div class="container">
+    <div class="container">
       <nav class="d-flex justify-content-between">
         <a href="/" title="Homepage">
-          <img src="images/AmandaWalden.png" class="logo d-none d-md-block" alt="Amanda's Logo" />
+          <img
+            src="images/AmandaWalden.png"
+            class="logo d-none d-md-block"
+            alt="Amanda's Logo"
+          />
           <img
             src="images/AmandaWalden.png"
             class="logo d-block d-md-none"
@@ -35,69 +42,122 @@
           />
         </a>
         <ul>
-          <li ><a href="/" title="Homepage"> Home </a></li>
+          <li><a href="/" title="Homepage"> Home </a></li>
           <li><a href="/about.html" title="About Amanda"> About </a></li>
-          <li class="active"><a href="/work.html" title="Amanda's Work"> Work </a></li>
+          <li class="active">
+            <a href="/work.html" title="Amanda's Work"> Work </a>
+          </li>
           <li><a href="/contact.html" title="Contact Amanda"> Contact </a></li>
         </ul>
       </nav>
     </div>
     <div class="content-container container">
       <div class="content">
-            <h1 class="mb-5">Take a look at what I've been working on!</h1>
+        <h1 class="mb-5">Take a look at what I've been working on!</h1>
         <div class="row">
-        <div class="col-md-6 mb-4">
-        <img src="images/Landing-Project.png" alt="Landing Page" class="sub-img img-fluid mb-3">
-        <h3 class="text-center m-0">Landing Project</h3>
-        <p class="text-center text-muted">Built with HTML, CSS and Javascript</p>
-        </div>  
-         <div class="col-md-6 mb-4">
-        <img src="images/Project-Weather-App.png" alt="Weather App" class="img-fluid mb-5">
-        <h3 class="text-center m-0">Weather App</h3>
-        <p class="text-center text-muted">Built with HTML, CSS and Javascript</p>
+          <div class="col-md-6 mb-4">
+            <a href="https://www.shecodes.io/workshops/shecodes-basics-a5348804-efdf-4f64-a43c-00e2350c47b5/projects/603459" target="_blank">
+            <img
+              src="images/Landing-Project.png"
+              alt="Landing Page"
+              class="img-fluid mb-3"
+            />
+            </a>
+            <h3 class="text-center m-0">Landing Project</h3>
+            <p class="text-center text-muted">
+              Built with HTML, CSS and Javascript
+            </p>
+          </div>
+          <div class="col-md-6 mb-4">
+            <a
+              href="https://www.shecodes.io/workshops/shecodes-plus-3ff7a1be-6209-4981-80b1-b08a05d734da/projects/679183"
+              target="_blank"
+            >
+              <img
+                src="images/Project-Weather-App.png"
+                alt="Weather App"
+                class="img-fluid mb-5"
+              />
+            </a>
+            <h3 class="text-center m-0">Weather App</h3>
+            <p class="text-center text-muted">
+              Built with HTML, CSS and Javascript
+            </p>
+          </div>
         </div>
-        </div>
-        </div>
+      </div>
     </div>
-     <div class="content-container container">
+    <div class="content-container container">
       <div class="content">
-            <h1 class="mb-5 text-center">My Certifications</h1>
+        <h1 class="mb-5 text-center">My Certifications</h1>
         <div class="row">
-        <div class="col-md-6 mb-4">
-        <img src="images/SheCodesBasicCertificate.png" alt="SheCodes Basic Certificate" class="sub-img img-fluid mb-3">
-        <h3 class="text-center m-0">SheCodes Basic Certificate</h3>
-        </div>  
-         <div class="col-md-6 mb-4">
-        <img src="images/SheCodesPlusCertificate.png" alt="SheCodes Plus Certificate" class="img-fluid mb-3">
-        <h3 class="text-center m-0">SheCodes Plus Certificate</h3>
+          <div class="col-md-6 mb-4">
+            <img
+              src="images/SheCodesBasicCertificate.png"
+              alt="SheCodes Basic Certificate"
+              class="sub-img img-fluid mb-3"
+            />
+            <h3 class="text-center m-0">SheCodes Basic Certificate</h3>
+          </div>
+          <div class="col-md-6 mb-4">
+            <img
+              src="images/SheCodesPlusCertificate.png"
+              alt="SheCodes Plus Certificate"
+              class="img-fluid mb-3"
+            />
+            <h3 class="text-center m-0">SheCodes Plus Certificate</h3>
+          </div>
         </div>
-        </div>
-        </div>
+      </div>
     </div>
     <footer class="container">
-        <div class="contact-box  justify-content-between mb-5 d-none d-md-flex">
-          <div>
+      <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+        <div>
           <h3>Work Inquiry</h3>
-          <p class="text-muted">Let's work  together</p>
-          </div>
-          <div>
-          <a href="/contact.html"  class="btn btn-branding mt-3" title="Contact Me">Contact Me</a>
-           </div>
+          <p class="text-muted">Let's work together</p>
         </div>
+        <div>
+          <a
+            href="/contact.html"
+            class="btn btn-branding mt-3"
+            title="Contact Me"
+            >Contact Me</a
+          >
+        </div>
+      </div>
 
-        <div class="d-flex justify-content-center mb-5">
-        <a href="mailto:awalden95@gmail.com" class="email-link" title="Email Amanda">Awalden95@mail.com</a>
-        </div>
-        <div class="social-links d-flex justify-content-center mb-5"> 
-          
-         <a href="https://github.com/AmandaWalden" target="_blank" title="Github Profile">
-           <i class="fa-brands fa-github"></i> 
+      <div class="d-flex justify-content-center mb-5">
+        <a
+          href="mailto:awalden95@gmail.com"
+          class="email-link"
+          title="Email Amanda"
+          >Awalden95@mail.com</a
+        >
+      </div>
+      <div class="social-links d-flex justify-content-center mb-5">
+        <a
+          href="https://github.com/AmandaWalden"
+          target="_blank"
+          title="Github Profile"
+        >
+          <i class="fa-brands fa-github"></i>
         </a>
-        <a href="https://www.linkedin.com/in/amanda-walden-37a3b7227/" target="_blank" title="Linkedin Profile">
+        <a
+          href="https://www.linkedin.com/in/amanda-walden-37a3b7227/"
+          target="_blank"
+          title="Linkedin Profile"
+        >
           <i class="fa-brands fa-linkedin"></i>
         </a>
-        </div>
-        <p class="text-center mt-5"> ✌ This project was coded by Amanda Walden, and it is <a href="https://github.com/AmandaWalden/My-Portfolio-Project" target="_blank">open-sourced</a></p>
-      </footer>
+      </div>
+      <p class="text-center mt-5">
+        ✌ This project was coded by Amanda Walden, and it is
+        <a
+          href="https://github.com/AmandaWalden/My-Portfolio-Project"
+          target="_blank"
+          >open-sourced</a
+        >
+      </p>
+    </footer>
   </body>
 </html>
