--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     </p>
     <div class="container">
       <div class="row mb-5">
-        <div class="col d-none d-lg-block">
-      <a href="https://www.shecodes.io/workshops/shecodes-basics-a5348804-efdf-4f64-a43c-00e2350c47b5/projects/603459" target="_blank"><img src="images/Landing-Project.png" class="img-fluid" alt="Landing Project"></a>
+        <div class="col d-none d-md-block">
+      <a href="https://www.shecodes.io/workshops/shecodes-basics-a5348804-efdf-4f64-a43c-00e2350c47b5/projects/603459" target="_blank" title="Landing Page"><img src="images/Landing-Project.png" class="img-fluid" alt="Landing Project"></a>
         </div>
         <div class="col">
           <div class="product-description">
@@ -61,7 +61,7 @@
             <p class="mb-5 text-muted">
               This was my first project with SheCodes. The objective of the project was to make a file about something you love. The example was Greek Yogurt so I thought of my favorite food from my hometown of Orlando, Florida. 
             </p>
-            <a href="https://www.shecodes.io/workshops/shecodes-basics-a5348804-efdf-4f64-a43c-00e2350c47b5/projects/603459" class="btn btn-branding-outline" target="_blank"> Learn more</a>
+            <a href="https://www.shecodes.io/workshops/shecodes-basics-a5348804-efdf-4f64-a43c-00e2350c47b5/projects/603459" class="btn btn-branding-outline" target="_blank" title="Landing Page"> Learn more</a>
           </div>
         </div>
       </div>
@@ -75,11 +75,11 @@
             <p class="mb-5 text-muted">
             This was my second project with SheCodes. I learned about APIs, Bootstrap and how to host a website by using real-time data.
             </p>
-            <a href="https://www.shecodes.io/workshops/shecodes-plus-3ff7a1be-6209-4981-80b1-b08a05d734da/projects/679183" class="btn btn-branding-outline" target="_blank"> Learn more</a>
+            <a href="https://www.shecodes.io/workshops/shecodes-plus-3ff7a1be-6209-4981-80b1-b08a05d734da/projects/679183" class="btn btn-branding-outline" target="_blank" title="Weather App Page"> Learn more</a>
           </div>
         </div>
-        <div class="col d-none d-lg-block">
-        <a href="https://www.shecodes.io/workshops/shecodes-plus-3ff7a1be-6209-4981-80b1-b08a05d734da/projects/679183" target="_blank"><img src="images/Project-Weather-App.png" class="img-fluid" alt="Weather Project Preview" /></a>
+        <div class="col d-none d-md-block">
+        <a href="https://www.shecodes.io/workshops/shecodes-plus-3ff7a1be-6209-4981-80b1-b08a05d734da/projects/679183" target="_blank" title="Weather App Page"><img src="images/Project-Weather-App.png" class="img-fluid" alt="Weather Project Preview" /></a>
         </div>
       </div>
     </div>
@@ -95,7 +95,7 @@
         </div>
 
         <div class="d-flex justify-content-center mb-5">
-        <a href="mailto:awalden95@gmail.com" class="email-link" title="Email Amanda">Awalden95@mail.com</a>
+        <a href="mailto:awalden95@gmail.com" class="email-link" title="Email Amanda">Awalden95@gmail.com</a>
         </div>
         <div class="social-links d-flex justify-content-center mb-5"> 
          
@@ -106,7 +106,7 @@
           <i class="fa-brands fa-linkedin"></i>
         </a>
         </div>
-        <p class="text-center mt-5"> ✌ This project was coded by Amanda Walden, and it is <a href="https://github.com/AmandaWalden/My-Portfolio-Project" target="_blank">open-sourced</a></p>
+        <p class="text-center mt-5"> ✌ This project was coded by Amanda Walden, and it is <a href="https://github.com/AmandaWalden/My-Portfolio-Project" target="_blank" title="This Portfolio's Repository">open-sourced</a></p>
       </footer>
     </div>
   </body>
