--- a/contact.html
+++ b/contact.html
@@ -56,18 +56,18 @@
         <h1 class="mb-5">Let's get in touch!</h1>
         <h3>Email</h3>
         <p>
-          <a href="mailto:awalden95@gmail.com"> Awalden95@gmail.com </a>
+          <a href="mailto:awalden95@gmail.com" title="Email Amanda"> Awalden95@gmail.com </a>
         </p>
         <h3>LinkedIn</h3>
         <p>
-          <a href="www.linkedin.com/in/amanda-walden-37a3b7227" target="_blank">
+          <a href="www.linkedin.com/in/amanda-walden-37a3b7227" target="_blank" title="LinkedIn Profile">
             @amanda-walden-37a3b7227
           </a>
         </p>
-        <h3>Instagram</h3>
+        <h3>GitHub</h3>
         <p>
-          <a href="https://www.instagram.com/awalden95/" target="_blank">
-            @awalden95
+          <a href="https://github.com/AmandaWalden" target="_blank" title="GitHub Profile">
+            @AmandaWalden
           </a>
         </p>
       </div>
@@ -93,7 +93,7 @@
           href="mailto:awalden95@gmail.com"
           class="email-link"
           title="Email Amanda"
-          >Awalden95@mail.com</a
+          >Awalden95@gmail.com</a
         >
       </div>
       <div class="social-links d-flex justify-content-center mb-5">
@@ -116,7 +116,7 @@
         ✌ This project was coded by Amanda Walden, and it is
         <a
           href="https://github.com/AmandaWalden/My-Portfolio-Project"
-          target="_blank"
+          target="_blank" title="This Portfolio's Repository"
           >open-sourced</a
         >
       </p>
