--- a/work.html
+++ b/work.html
@@ -56,7 +56,7 @@
         <h1 class="mb-5">Take a look at what I've been working on!</h1>
         <div class="row">
           <div class="col-md-6 mb-4">
-            <a href="https://www.shecodes.io/workshops/shecodes-basics-a5348804-efdf-4f64-a43c-00e2350c47b5/projects/603459" target="_blank">
+            <a href="https://www.shecodes.io/workshops/shecodes-basics-a5348804-efdf-4f64-a43c-00e2350c47b5/projects/603459" target="_blank" title="Landing Page">
             <img
               src="images/Landing-Project.png"
               alt="Landing Page"
@@ -72,6 +72,7 @@
             <a
               href="https://www.shecodes.io/workshops/shecodes-plus-3ff7a1be-6209-4981-80b1-b08a05d734da/projects/679183"
               target="_blank"
+              title="Weather App Page"
             >
               <img
                 src="images/Project-Weather-App.png"
@@ -96,6 +97,7 @@
               src="images/SheCodesBasicCertificate.png"
               alt="SheCodes Basic Certificate"
               class="sub-img img-fluid mb-3"
+              title="SheCodes Basic Certificate"
             />
             <h3 class="text-center m-0">SheCodes Basic Certificate</h3>
           </div>
@@ -104,6 +106,7 @@
               src="images/SheCodesPlusCertificate.png"
               alt="SheCodes Plus Certificate"
               class="img-fluid mb-3"
+              title="SheCodes Plus Certificate"
             />
             <h3 class="text-center m-0">SheCodes Plus Certificate</h3>
           </div>
@@ -131,7 +134,7 @@
           href="mailto:awalden95@gmail.com"
           class="email-link"
           title="Email Amanda"
-          >Awalden95@mail.com</a
+          >Awalden95@gmail.com</a
         >
       </div>
       <div class="social-links d-flex justify-content-center mb-5">
@@ -154,7 +157,7 @@
         ✌ This project was coded by Amanda Walden, and it is
         <a
           href="https://github.com/AmandaWalden/My-Portfolio-Project"
-          target="_blank"
+          target="_blank" title="This Portfolio's Repository"
           >open-sourced</a
         >
       </p>
