rewrote the paragraph on the about me page.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <div class="product-description">
             <h2 class="mb-5">Landing Project</h2>
             <p class="mb-5 text-muted">
-              This was my first project with SheCodes. The objective of the project was to make a file about something you love. The example was Greek Yogurt so I thought of my favorite food from my hometown of Orlando, Florida. 
+              This was my first project with SheCodes. The objective of the project was to make a website about something you love. So I decided to go with my favorite restaurant from my hometown of Orlando, Florida. 
             </p>
             <a href="https://www.shecodes.io/workshops/shecodes-basics-a5348804-efdf-4f64-a43c-00e2350c47b5/projects/603459" class="btn btn-branding-outline" target="_blank" title="Landing Page"> Learn more</a>
           </div>
