--- a/about.html
+++ b/about.html
@@ -61,22 +61,25 @@
               I'm a Front-end Developer. My current job position is a Licensed
               Massage Therapist at an Integrated Healthcare office. What I love
               most about my current job is when I'm able to locate their problem
-              area and improve their quality of life. But in my freetime I had a
-              desire to learn some new skills and I came across a girl on TikTok
-              and she was explaining her job as a Developer. I did my research
-              and started learning about what coding is and found out that I
-              love coding and have been doing it for fun after I get off work. I
-              then realized that coding could be a new career that would be fun
-              and get paid as well. After that realization, I began to research
-              schools that would prepare me for my new career. I decided on
-              "SheCodes" to get my training as a Front-end Developer. I'm
-              extremely passionate and would love to be able to do this job
-              full-time. I'm having so much fun learning the languages and I
-              plan to continue learning. The languages and coding tools I have
-              learned are HTML5, CSS3, Javascript5, API, Bootstrap, GitHub,
-              Visual Studio Code, Flexbox, SEO, Hosting and Responsive.
+              area and improve their quality of life. In my free time I had a
+              desire to learn some new skills and since all of my friends talked
+              about their careers in engineering it made me curious about what I
+              could do in tech. So I did some research and I came across coding.
+              I started trying to learn some different languages on Codecademy
+              and was doing it as a hobby during my free time. Then I realized
+              that coding could be a new career that would be fun and get paid
+              as well. After that realization, I began to research schools that
+              would prepare me for my new career. I decided on "SheCodes" to get
+              my training as a Front-end Developer. I'm extremely passionate and
+              would love to be able to do this job full-time. I'm having so much
+              fun learning the languages and I plan to continue learning. The
+              languages and coding tools I have learned are HTML5, CSS3,
+              Javascript5, API, Bootstrap, GitHub, Visual Studio Code, Flexbox,
+              SEO, Hosting and Responsive.
             </p>
-            <a href="/work.html" class="btn btn-branding" title="Amanda's Work">See my projects</a>
+            <a href="/work.html" class="btn btn-branding" title="Amanda's Work"
+              >See my projects</a
+            >
           </div>
         </div>
         <div class="col-lg-6">
@@ -132,7 +135,8 @@
         ✌ This project was coded by Amanda Walden, and it is
         <a
           href="https://github.com/AmandaWalden/My-Portfolio-Project"
-          target="_blank" title="This Portfolio's Repository"
+          target="_blank"
+          title="This Portfolio's Repository"
           >open-sourced</a
         >
       </p>
