--- a/work.html
+++ b/work.html
@@ -92,7 +92,7 @@
       <div class="content">
         <h1 class="mb-5 text-center">My Certifications</h1>
         <div class="row">
-          <div class="col-md-6 mb-4">
+          <div class="col-md-4 mb-4">
             <img
               src="images/SheCodesBasicCertificate.png"
               alt="SheCodes Basic Certificate"
@@ -101,7 +101,7 @@
             />
             <h3 class="text-center m-0">SheCodes Basic Certificate</h3>
           </div>
-          <div class="col-md-6 mb-4">
+          <div class="col-md-4 mb-4">
             <img
               src="images/SheCodesPlusCertificate.png"
               alt="SheCodes Plus Certificate"
@@ -109,6 +109,15 @@
               title="SheCodes Plus Certificate"
             />
             <h3 class="text-center m-0">SheCodes Plus Certificate</h3>
+          </div>
+           <div class="col-md-4 mb-4">
+            <img
+              src="images/SheCodesResponsiveCertificate.png"
+              alt="SheCodes Responsive Certificate"
+              class="sub-img img-fluid mb-3"
+              title="SheCodes Basic Certificate"
+            />
+            <h3 class="text-center m-0">SheCodes Responsive Certificate</h3>
           </div>
         </div>
       </div>
