Prettier made my code nice.

--- a/work.html
+++ b/work.html
@@ -56,12 +56,16 @@
         <h1 class="mb-5">Take a look at what I've been working on!</h1>
         <div class="row">
           <div class="col-md-6 mb-4">
-            <a href="https://www.shecodes.io/workshops/shecodes-basics-a5348804-efdf-4f64-a43c-00e2350c47b5/projects/603459" target="_blank" title="Landing Page">
-            <img
-              src="images/Landing-Project.png"
-              alt="Landing Page"
-              class="img-fluid mb-3"
-            />
+            <a
+              href="https://www.shecodes.io/workshops/shecodes-basics-a5348804-efdf-4f64-a43c-00e2350c47b5/projects/603459"
+              target="_blank"
+              title="Landing Page"
+            >
+              <img
+                src="images/Landing-Project.png"
+                alt="Landing Page"
+                class="img-fluid mb-3"
+              />
             </a>
             <h3 class="text-center m-0">Landing Project</h3>
             <p class="text-center text-muted">
@@ -110,7 +114,7 @@
             />
             <h3 class="text-center m-0">SheCodes Plus Certificate</h3>
           </div>
-           <div class="col-md-4 mb-4">
+          <div class="col-md-4 mb-4">
             <img
               src="images/SheCodesResponsiveCertificate.png"
               alt="SheCodes Responsive Certificate"
@@ -166,7 +170,8 @@
         ✌ This project was coded by Amanda Walden, and it is
         <a
           href="https://github.com/AmandaWalden/My-Portfolio-Project"
-          target="_blank" title="This Portfolio's Repository"
+          target="_blank"
+          title="This Portfolio's Repository"
           >open-sourced</a
         >
       </p>
