--- a/contact.html
+++ b/contact.html
@@ -56,17 +56,27 @@
         <h1 class="mb-5">Let's get in touch!</h1>
         <h3>Email</h3>
         <p>
-          <a href="mailto:awalden95@gmail.com" title="Email Amanda"> Awalden95@gmail.com </a>
+          <a href="mailto:awalden95@gmail.com" title="Email Amanda">
+            Awalden95@gmail.com
+          </a>
         </p>
         <h3>LinkedIn</h3>
         <p>
-          <a href="www.linkedin.com/in/amanda-walden-37a3b7227" target="_blank" title="LinkedIn Profile">
+          <a
+            href="www.linkedin.com/in/amanda-walden-37a3b7227"
+            target="_blank"
+            title="LinkedIn Profile"
+          >
             @amanda-walden-37a3b7227
           </a>
         </p>
         <h3>GitHub</h3>
         <p>
-          <a href="https://github.com/AmandaWalden" target="_blank" title="GitHub Profile">
+          <a
+            href="https://github.com/AmandaWalden"
+            target="_blank"
+            title="GitHub Profile"
+          >
             @AmandaWalden
           </a>
         </p>
@@ -116,7 +126,8 @@
         ✌ This project was coded by Amanda Walden, and it is
         <a
           href="https://github.com/AmandaWalden/My-Portfolio-Project"
-          target="_blank" title="This Portfolio's Repository"
+          target="_blank"
+          title="This Portfolio's Repository"
           >open-sourced</a
         >
       </p>
