Updated my LinkedIn links on all pages.

--- a/contact.html
+++ b/contact.html
@@ -63,11 +63,11 @@
         <h3>LinkedIn</h3>
         <p>
           <a
-            href="www.linkedin.com/in/amanda-walden-37a3b7227"
+            href="www.linkedin.com/in/amanda-g-walden"
             target="_blank"
             title="LinkedIn Profile"
           >
-            @amanda-walden-37a3b7227
+            @amanda-g-walden
           </a>
         </p>
         <h3>GitHub</h3>
@@ -115,7 +115,7 @@
           <i class="fa-brands fa-github"></i>
         </a>
         <a
-          href="https://www.linkedin.com/in/amanda-walden-37a3b7227/"
+          href="www.linkedin.com/in/amanda-g-walden"
           target="_blank"
           title="Linkedin Profile"
         >
