--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
          <a href="https://github.com/AmandaWalden" target="_blank" title="Github Profile">
            <i class="fa-brands fa-github"></i> 
         </a>
-        <a href="https://www.linkedin.com/in/amanda-walden-37a3b7227/" target="_blank" title="Linkedin Profile">
+        <a href="www.linkedin.com/in/amanda-g-walden" target="_blank" title="Linkedin Profile">
           <i class="fa-brands fa-linkedin"></i>
         </a>
         </div>
