--- a/work.html
+++ b/work.html
@@ -159,7 +159,7 @@
           <i class="fa-brands fa-github"></i>
         </a>
         <a
-          href="https://www.linkedin.com/in/amanda-walden-37a3b7227/"
+          href="www.linkedin.com/in/amanda-g-walden"
           target="_blank"
           title="Linkedin Profile"
         >
