Fixed LinkedIn links.

--- a/about.html
+++ b/about.html
@@ -124,7 +124,7 @@
           <i class="fa-brands fa-github"></i>
         </a>
         <a
-          href="www.linkedin.com/in/amanda-g-walden"
+          href="https://www.linkedin.com/in/amanda-g-walden"
           target="_blank"
           title="Linkedin Profile"
         >
