--- a/work.html
+++ b/work.html
@@ -38,7 +38,7 @@
           <img
             src="images/AmandaWalden.png"
             class="logo d-block d-md-none"
-            alt="Amanda's Logo"
+            alt="Amanda's logo"
           />
         </a>
         <ul>
