--- a/contact.html
+++ b/contact.html
@@ -33,12 +33,12 @@
           <img
             src="images/AmandaWalden.png"
             class="logo d-none d-md-block"
-            alt="Amanda's Logo"
+            alt="Amanda's logo"
           />
           <img
             src="images/AmandaWalden.png"
             class="logo d-block d-md-none"
-            alt="Amanda's Logo"
+            alt="Amanda's logo"
           />
         </a>
         <ul>
