Updated important info.

--- a/index.html
+++ b/index.html
@@ -74,6 +74,41 @@
         </div>
       </div>
     </div>
+
+     <div class="container">
+      <div class="row mb-5">
+        <div class="col d-none d-md-block">
+      <a href="https://my-weather-today.netlify.app/" target="_blank" title="React Weather App"><img src="images/ReactWeather.png" class="img-fluid" alt="React Weather App"></a>
+        </div>
+        <div class="col">
+          <div class="product-description">
+            <h2 class="mb-5">React Weather App</h2>
+            <p class="mb-5 text-muted">
+              This was my first of two projects in SheCodes React workshop. The objective of the project was to recreate my first weather but this time with React. 
+            </p>
+            <a href="https://my-weather-today.netlify.app/" class="btn btn-branding-outline" target="_blank" title="Landing Page"> Learn more</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col">
+          <div class="product-description">
+            <h2 class="mb-5">React Dictionary App</h2>
+            <p class="mb-5 text-muted">
+            This was my second project in SheCodes React workshop. I learned how to define a word in different ways via APIs and React components.
+            </p>
+            <a href="https://www.shecodes.io/workshops/shecodes-react-b3e0ee24-e0f4-4fe7-adb0-13c32734c71b/projects/932006" class="btn btn-branding-outline" target="_blank" title="React Dictionary App"> Learn more</a>
+          </div>
+        </div>
+        <div class="col d-none d-md-block">
+        <a href="https://www.shecodes.io/workshops/shecodes-react-b3e0ee24-e0f4-4fe7-adb0-13c32734c71b/projects/932006" target="_blank" title="Weather App Page"><img src="images/DictionarySnapshot.png" class="img-fluid" alt="React Dictionary App" /></a>
+        </div>
+      </div>
+    </div>
+
    <footer class="container">
         <div class="contact-box  justify-content-between mb-5 d-none d-md-flex">
           <div>
