--- a/work.html
+++ b/work.html
@@ -72,7 +72,7 @@
               Built with HTML, CSS and Javascript
             </p>
           </div>
-          <div class="col-md-6 mb-4">
+         <div class="col-md-6 mb-4">
             <a
               href="https://www.shecodes.io/workshops/shecodes-plus-3ff7a1be-6209-4981-80b1-b08a05d734da/projects/679183"
               target="_blank"
@@ -89,6 +89,40 @@
               Built with HTML, CSS and Javascript
             </p>
           </div>
+           <div class="col-md-6 mb-1">
+            <a
+              href="https://my-weather-today.netlify.app/"
+              target="_blank"
+              title="React Weather App"
+            >
+              <img
+                src="images/ReactWeather.png"
+                alt="React Weather App"
+                class="img-fluid mb-0"
+              />
+            </a>
+            <h3 class="text-center m-0">React Weather App</h3>
+            <p class="text-center text-muted">
+              Built with HTML, CSS, API and React
+            </p>
+          </div>
+          <div class="col-md-6 mb-5">
+            <a
+              href="https://www.shecodes.io/workshops/shecodes-react-b3e0ee24-e0f4-4fe7-adb0-13c32734c71b/projects/932006"
+              target="_blank"
+              title="Dictionary App"
+            >
+              <img
+                src="images/DictionarySnapshot.png"
+                alt="Dictionary Page"
+                class="img-fluid mb-5"
+              />
+            </a>
+            <h3 class="text-center m-0 pt-3">Dictionary App</h3>
+            <p class="text-center text-muted">
+              Built with HTML, CSS, API and React
+            </p>
+          </div>
         </div>
       </div>
     </div>
@@ -96,7 +130,7 @@
       <div class="content">
         <h1 class="mb-5 text-center">My Certifications</h1>
         <div class="row">
-          <div class="col-md-4 mb-4">
+          <div class="col-md-3 mb-3">
             <img
               src="images/SheCodesBasicCertificate.png"
               alt="SheCodes Basic Certificate"
@@ -105,7 +139,7 @@
             />
             <h3 class="text-center m-0">SheCodes Basic Certificate</h3>
           </div>
-          <div class="col-md-4 mb-4">
+          <div class="col-md-3 mb-3">
             <img
               src="images/SheCodesPlusCertificate.png"
               alt="SheCodes Plus Certificate"
@@ -114,14 +148,23 @@
             />
             <h3 class="text-center m-0">SheCodes Plus Certificate</h3>
           </div>
-          <div class="col-md-4 mb-4">
+          <div class="col-md-3 mb-3">
             <img
               src="images/SheCodesResponsiveCertificate.png"
               alt="SheCodes Responsive Certificate"
               class="sub-img img-fluid mb-3"
-              title="SheCodes Basic Certificate"
+              title="SheCodes Responsive Certificate"
             />
             <h3 class="text-center m-0">SheCodes Responsive Certificate</h3>
+          </div>
+           <div class="col-md-3 mb-3">
+            <img
+              src="images/SheCodesReactCertificate.png"
+              alt="SheCodes Responsive Certificate"
+              class="sub-img img-fluid mb-3"
+              title="SheCodes React Certificate"
+            />
+            <h3 class="text-center m-0">SheCodes React Certificate</h3>
           </div>
         </div>
       </div>
